--- a/default/app/views/_shared/partials/menu.phtml
+++ b/default/app/views/_shared/partials/menu.phtml
@@ -22,10 +22,10 @@
 					data-toggle="dropdown" role="button" aria-haspopup="true"
 					aria-expanded="false">Reportes <span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><a href="#">Geografía</a></li>
-						<li><a href="#">Temporalidad</a></li>
+						<li><a href="#">Por localidad</a></li>
+						<li><a href="#">Por usuario</a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="#">Todos</a></li>
+						<li><?php echo Html::link('reportes/index','Ver todos');?></li>
 					</ul></li>
 			</ul>
 			<?php }?>
