--- a/default/app/views/_shared/templates/default.phtml
+++ b/default/app/views/_shared/templates/default.phtml
@@ -12,8 +12,8 @@
   <?php echo Tag::css('style')?>
 <link href='https://fonts.googleapis.com/css?family=Ubuntu|Roboto|Play'
 	rel='stylesheet' type='text/css'>
-  <?php echo Tag::js('jquery/jquery.min')?>
-  <?php echo Tag::js('bootstrap/bootstrap.min')?>
+  <?php echo Tag::js('jquery-1.12.0.min')?>
+  <?php echo Tag::js('bootstrap.min')?>
     <?php echo Tag::js('scripts')?>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
