--- a/default/app/views/_shared/partials/reportes.phtml
+++ b/default/app/views/_shared/partials/reportes.phtml
@@ -2,50 +2,11 @@
 <div class="row reportes">
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h3 class="panel-title">TITULO REPORTE</h3>
+			<h3 class="panel-title"></h3>
 		</div>
 		<div class="panel-body">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<p></p>
 		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			<h3 class="panel-title">TITULO REPORTE</h3>
-		</div>
-		<div class="panel-body">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			<h3 class="panel-title">TITULO REPORTE</h3>
-		</div>
-		<div class="panel-body">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			<h3 class="panel-title">TITULO REPORTE</h3>
-		</div>
-		<div class="panel-body">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</div>
-		
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			<h3 class="panel-title">TITULO REPORTE</h3>
-		</div>
-		<div class="panel-body">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</div>
-		
 	</div>
 </div>
 
