--- a/default/app/views/_shared/templates/default.phtml
+++ b/default/app/views/_shared/templates/default.phtml
@@ -12,10 +12,7 @@
   <?php echo Tag::css('style')?>
 <link href='https://fonts.googleapis.com/css?family=Ubuntu|Roboto|Play'
 	rel='stylesheet' type='text/css'>
-  <?php echo Tag::js('jquery-1.12.0.min')?>
-  <?php echo Tag::js('bootstrap.min')?>
-  <?php echo Tag::js('scripts')?>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
   <?= Html::includeCss()?>
 </head>
@@ -34,5 +31,9 @@
 		</div>
 		<div class="row"></div>
 	</div>
+	<?php echo Tag::js('jquery-1.12.0.min')?>
+  	<?php echo Tag::js('jquery.validate')?>
+  	<?php echo Tag::js('bootstrap.min')?>
+ 	<?php echo Tag::js('scripts')?>
 </body>
 </html>
