--- a/default/app/views/index/index.phtml
+++ b/default/app/views/index/index.phtml
@@ -1,3 +1,9 @@
 <div>
     <?php echo '&nbsp;'; ?>
+	<div style="width: 100%">
+		<iframe width="100%" height="600"
+			src="http://www.mapsdirections.info/crear-un-mapa-de-google/map.php?width=100%&height=600&hl=en&coord=39.4082248,-0.406186&q=Direcci%C3%B3n+(Nombre)&ie=UTF8&t=&z=14&iwloc=A&output=embed"
+			frameborder="0" scrolling="no" marginheight="0" marginwidth="0"> </iframe>
+	</div>
+	<br />
 </div>
