--- a/default/public/css/style.css
+++ b/default/public/css/style.css
@@ -23,7 +23,7 @@
 
 body {
 	font-family: 'Ubuntu', serif;
-	padding-top: 40px;
+	padding-top: 60px;
 	color: #224562;
 }
 
@@ -144,7 +144,12 @@ hr {
 }
 
 div.reportes {
-	padding-top: 20px;
+	
 	padding-right: 20px;
 	padding-left: 20px;
+}
+
+.gray-font{
+	color:#777;
+	font-weight: bold;
 }
