--- a/default/app/views/index/index.phtml
+++ b/default/app/views/index/index.phtml
@@ -1,6 +1,27 @@
 <div>
 
-   	&nbsp;
-  
-	
+	<div class="jumbotron">
+
+		<h1>Quienes somos:</h1>
+		<p>Somos un grupo de estudiantes que nos hemos dedicado a hacer esta
+			app para poder mejorar el entorno que nos rodea. Queremos poder
+			denunciar cualquier tipo de desperfecto que haya en la calle y
+			ponernos en contacto con aquellas instituciones que puedan
+			solucionarlos.</p>
+
+		<br>
+		<h2>About us:</h2>
+		<p>We are a group of students that we have dedicated to making this
+			app to improve the environment around us. We want to report any type
+			of damage you have in the street and get in contact with institutions
+			that can solve them.</p>
+
+		<h2>Qui som:</h2>
+		<p>Som un grup d'estudiants que ens hem dedicat a fer esta app per
+			poder millorar l´entorn que ens rodeja. Volem poder denunciar
+			qualsevol tipus de desperfecte que hi haja en el carrer i posar-nos
+			en contacte amb aquelles institucions que puguem solucionar-los.</p>
+	</div>
+
+
 </div>
