--- a/default/app/views/reportes/ver.phtml
+++ b/default/app/views/reportes/ver.phtml
@@ -67,7 +67,7 @@
 				</div>
                 <div class="form-group">
 					<label title="">Caducidad</label> <input name="caducidad" type="text"
-						class="form-control" value="<?php echo $data->caducidad_at?>" disabled>
+						class="form-control" value="<?php echo $data->caducidad?>" disabled>
 				</div>
                 <div class="form-group">
 					<label >Latitud</label> <input name="latitud" type="text"
