--- a/default/app/views/_shared/templates/default.phtml
+++ b/default/app/views/_shared/templates/default.phtml
@@ -15,8 +15,13 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
   <?= Html::includeCss()?>
+  <?php echo Tag::js('jquery-1.12.0.min')?>
+  
+  	<?php echo Tag::js('bootstrap.min')?>
+  		<?php echo Tag::js('jquery.validate')?>
+ 	<?php echo Tag::js('scripts')?>
 </head>
-<body>
+<body <?php if(Router::get ( 'controller' ) == 'index'){?> style="background-image:url('/default/public/img/background.jpg')"<?php }?>>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 no-side-margin no-side-padding"><?php View::partial('menu') ?></div>
@@ -31,9 +36,6 @@
 		</div>
 		<div class="row"></div>
 	</div>
-	<?php echo Tag::js('jquery-1.12.0.min')?>
-  	<?php echo Tag::js('jquery.validate')?>
-  	<?php echo Tag::js('bootstrap.min')?>
- 	<?php echo Tag::js('scripts')?>
+
 </body>
 </html>
