--- a/default/app/views/reportes/editar.phtml
+++ b/default/app/views/reportes/editar.phtml
@@ -68,7 +68,7 @@
 				</div>
                 <div class="form-group">
 					<label title="">Caducidad</label> <input name="caducidad" type="text"
-						class="form-control" value="<?php echo $data->caducidad_at?>">
+						class="form-control" value="<?php echo $data->caducidad?>">
 				</div>
                 <div class="form-group">
 					<label >Latitud</label> <input name="latitud" type="text"
