--- a/default/app/views/index/index.phtml
+++ b/default/app/views/index/index.phtml
@@ -1,6 +1,4 @@
-<div>
-
-	<div class="jumbotron">
+	<div class="jumbotron white-background text-justify">
 
 		<h1>Quienes somos:</h1>
 		<p>Somos un grupo de estudiantes que nos hemos dedicado a hacer esta
@@ -22,6 +20,3 @@
 			qualsevol tipus de desperfecte que hi haja en el carrer i posar-nos
 			en contacte amb aquelles institucions que puguem solucionar-los.</p>
 	</div>
-
-
-</div>
