--- a/default/public/css/style.css
+++ b/default/public/css/style.css
@@ -6,7 +6,10 @@
 	-ms-flex-align: center;
 	align-items: center;
 }
-
+.jumbotron.white-background{
+	background-color: white;
+	border: 2px solid #224562;
+}
 .no-side-padding {
 	padding-right: 0px;
 	padding-left: 0px;
@@ -37,7 +40,6 @@ body {
 	border-radius: 0px;
 	border-width: 0px 0px 2px 0px;
 	border-color: #152a3b;
-	background: #224562;
 	background: #224562;
 }
 
