--- a/default/app/views/usuarios/nuevo.phtml
+++ b/default/app/views/usuarios/nuevo.phtml
@@ -14,7 +14,7 @@
 
 <div class="row">
 	<div class="col-md-10 col-md-offset-1">
-		<form action="nuevo" method="post" ="nuevo_usuario">
+		<form action="nuevo" method="post" id="nuevo_usuario">
 			<div class="row">
 				<div class="col-md-6">
 					<div class="form-group">
@@ -84,6 +84,5 @@ $( document ).ready(function() {
     $('#random_pass').click(function(){
         $('#password').val(random_password(23));
     });
-   
 });
 </script>
